# BaleScanner

./: CMakeLists.txt  setup.cfg  setup.py
bags/bale_8/: metadata.yaml
bags/first_recording/: metadata.yaml
bags/install/: local_setup.sh  setup.sh
bags/log/: latest_build
bags/rosbag2_2025_12_02-21_56_04/: metadata.yaml
bags/two_bales/: metadata.yaml
bale_scanner/: bale_isolator.py  bale_reconstructor.py  bale_visualizer.py  static_map_publisher.py  trigger_static.py
gui/vue-project/: README.md  package.json
gui/vue-project/src/: App.vue  main.js
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/bale_scanner/lib/bale_scanner/: bale_reconstructor  bale_visualizer  test
install/bale_scanner/share/bale_scanner/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
launch/: launch.py
launch/install/: local_setup.sh  setup.sh
launch/log/: latest_build
log/: latest_build
rviz/: bale.rviz
